; ModuleID = '/home/carl/AnghaBench/redis/src/extr_cluster.c_clusterConnAcceptHandler.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_cluster.c_clusterConnAcceptHandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32* }

@CONN_STATE_CONNECTED = common dso_local global i64 0, align 8
@LL_VERBOSE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"Error accepting cluster node connection: %s\00", align 1
@clusterReadHandler = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @clusterConnAcceptHandler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clusterConnAcceptHandler(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i64 @connGetState(i32* %4)
  %6 = load i64, i64* @CONN_STATE_CONNECTED, align 8
  %7 = icmp ne i64 %5, %6
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = load i32, i32* @LL_VERBOSE, align 4
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @connGetLastError(i32* %10)
  %12 = call i32 @serverLog(i32 %9, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 %11)
  %13 = load i32*, i32** %2, align 8
  %14 = call i32 @connClose(i32* %13)
  br label %26

15:                                               ; preds = %1
  %16 = call %struct.TYPE_4__* @createClusterLink(i32* null)
  store %struct.TYPE_4__* %16, %struct.TYPE_4__** %3, align 8
  %17 = load i32*, i32** %2, align 8
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  store i32* %17, i32** %19, align 8
  %20 = load i32*, i32** %2, align 8
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %22 = call i32 @connSetPrivateData(i32* %20, %struct.TYPE_4__* %21)
  %23 = load i32*, i32** %2, align 8
  %24 = load i32, i32* @clusterReadHandler, align 4
  %25 = call i32 @connSetReadHandler(i32* %23, i32 %24)
  br label %26

26:                                               ; preds = %15, %8
  ret void
}

declare dso_local i64 @connGetState(i32*) #1

declare dso_local i32 @serverLog(i32, i8*, i32) #1

declare dso_local i32 @connGetLastError(i32*) #1

declare dso_local i32 @connClose(i32*) #1

declare dso_local %struct.TYPE_4__* @createClusterLink(i32*) #1

declare dso_local i32 @connSetPrivateData(i32*, %struct.TYPE_4__*) #1

declare dso_local i32 @connSetReadHandler(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
